// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Controls /> with default props 1`] = `
<div
  className="column"
>
  <div
    className="box"
  >
    <div
      className="control is-grouped "
    >
      <div
        className="control"
      >
        <button
          className="button is-primary is-large"
          disabled={false}
          id="startButton"
          onClick={[Function]}
        >
          Start
        </button>
        <button
          className="button is-danger is-large"
          disabled={true}
          id="squashButton"
          onClick={[Function]}
        >
          Squash
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Controls /> with squashDisabled 1`] = `
<div
  className="column"
>
  <div
    className="box"
  >
    <div
      className="control is-grouped "
    >
      <div
        className="control"
      >
        <button
          className="button is-primary is-large"
          disabled={false}
          id="startButton"
          onClick={[Function]}
        >
          Start
        </button>
        <button
          className="button is-danger is-large"
          disabled={true}
          id="squashButton"
          onClick={[Function]}
        >
          Squash
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Controls /> with startDisabled 1`] = `
<div
  className="column"
>
  <div
    className="box"
  >
    <div
      className="control is-grouped "
    >
      <div
        className="control"
      >
        <button
          className="button is-primary is-large"
          disabled={true}
          id="startButton"
          onClick={[Function]}
        >
          Start
        </button>
        <button
          className="button is-danger is-large"
          disabled={true}
          id="squashButton"
          onClick={[Function]}
        >
          Squash
        </button>
      </div>
    </div>
  </div>
</div>
`;
